--- a/第21讲：提高利用效率，代理池的搭建和使用.md
+++ b/第21讲：提高利用效率，代理池的搭建和使用.md
@@ -7,11 +7,12 @@
 接下来本课时我们就介绍一下如何搭建一个高效易用的代理池。
 
 #### 准备工作
+
 在这里代理池的存储我们需要借助于 Redis，因此这个需要额外安装。总体来说，本课时需要的环境如下：
 
-安装并成功运行和连接一个 Redis 数据库，安装方法见：https://cuiqingcai.com/5219.html。
-安装好 Python3（至少为 Python 3.6 版本），并能成功运行 Python 程序。
-安装好一些必要的库，包括 aiohttp、requests、redis-py、pyquery、Flask 等。
+* 安装并成功运行和连接一个 Redis 数据库，安装方法见：https://cuiqingcai.com/5219.html
+* 安装好 Python3（至少为 Python 3.6 版本），并能成功运行 Python 程序。
+* 安装好一些必要的库，包括 aiohttp、requests、redis-py、pyquery、Flask 等。
 
 建议使用 Python 虚拟环境安装，参考安装命令如下：
 ```python
