--- a/第23讲：利用资源，学会用打码平台处理验证码.md
+++ b/第23讲：利用资源，学会用打码平台处理验证码.md
@@ -7,7 +7,10 @@
 本课时我们就来介绍利用打码平台来识别验证码的流程。
 
 #### 学习目标
-本课时我们以一种点选验证码为例来讲解打码平台的使用方法，验证码的链接为：https://captcha3.scrape.cuiqingcai.com/，这个网站在每次登录的时候都会弹出一个验证码，其验证码效果图如下所示。
+本课时我们以一种点选验证码为例来讲解打码平台的使用方法，验证码的链接为：https://captcha3.scrape.cuiqingcai.com/,
+
+这个网站在每次登录的时候都会弹出一个验证码，其验证码效果图如下所示。
+
 ![](https://imgconvert.csdnimg.cn/aHR0cHM6Ly9zMC5sZ3N0YXRpYy5jb20vaS9pbWFnZTMvTTAxLzhBLzI1L0NncTJ4bDZaV05XQVVoUWFBQU1ZdEFSQzVhSTA1OC5wbmc?x-oss-process=image/format,png#pic_center)
 
 
