--- a/第26讲：模拟登录爬取实战案例.md
+++ b/第26讲：模拟登录爬取实战案例.md
@@ -192,7 +192,9 @@ INDEX_URL = urljoin(BASE_URL, '/page/1')
 USERNAME = 'admin'
 PASSWORD = 'admin'
 
-browser = webdriver.Chrome()
+options = webdriver.ChromeOptions()
+options.add_argument('--ignore-certificate-errors')
+browser = webdriver.Chrome(chrome_options=options)
 browser.get(BASE_URL)
 browser.find_element_by_css_selector('input[name="username"]').send_keys(USERNAME)
 browser.find_element_by_css_selector('input[name="password"]').send_keys(PASSWORD)
@@ -203,15 +205,6 @@ time.sleep(10)
 cookies = browser.get_cookies()
 print('Cookies', cookies)
 browser.close()
-
-# set cookies to requests
-session = requests.Session()
-for cookie in cookies:
-   session.cookies.set(cookie['name'], cookie['value'])
-
-response_index = session.get(INDEX_URL)
-print('Response Status', response_index.status_code)
-print('Response URL', response_index.url)
 ```
 这里我们使用 Selenium 先打开了 Chrome 浏览器，然后跳转到了登录页面，随后模拟输入了用户名和密码，接着点击了登录按钮，这时候我们可以发现浏览器里面就提示登录成功，然后成功跳转到了主页面。
 
